--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 asgiref==3.7.2
-beautifulsoup4==4.12.2
-bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 Django==4.2.3
 django-cors-headers==4.2.0
 django-replace==2020.12.3
 djangorestframework==3.14.0
+gunicorn==21.2.0
 idna==3.4
+packaging==23.2
 Pillow==10.0.0
-psycopg2==2.9.7
 python-slugify==8.0.1
 pytz==2023.3.post1
 requests==2.31.0
